<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
     <TextView  
		android:id="@+id/address_la"
		android:text="@string/address_la"
	    android:layout_width="220px" 
	    android:layout_height="wrap_content" 
        android:singleLine="false"
        android:textSize="20px"
        android:layout_marginRight="10px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="150px"
        android:layout_marginBottom="5px"/>
    <TextView  
		android:id="@+id/phone_la"
		android:text="@string/phone_la"
	    android:layout_width="220px" 
	    android:layout_height="wrap_content"
        android:textSize="20px"
        android:layout_below="@id/address_la"
        android:layout_marginRight="10px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="5px"
        android:layout_marginBottom="5px"/>
    <TextView  
		android:id="@+id/hours_la"
		android:text="@string/hours_la"
	    android:layout_width="220px" 
	    android:layout_height="wrap_content" 
        android:textSize="20px"
        android:layout_below="@id/phone_la"
        android:layout_marginRight="10px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="5px"
        android:layout_marginBottom="5px"/>
    <ImageView
		android:id="@+id/map_image_la" 
		android:layout_width="240px"
		android:layout_height="240px"
		android:src="@drawable/splash"
        android:layout_toRightOf="@id/address_la"
        android:layout_marginRight="10px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="100px"
        android:layout_marginBottom="5px"/>
</RelativeLayout>