<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/redpattern" >
     <TextView  
		android:id="@+id/address_cc"
		android:text="@string/address_cc"
	    android:layout_width="220px" 
	    android:layout_height="wrap_content" 
        android:singleLine="false"
        android:textSize="20px"
        android:layout_marginRight="10px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="150px"
        android:layout_marginBottom="5px"
        android:textColor="@color/gray"/>
    <TextView  
		android:id="@+id/phone_cc"
		android:text="@string/phone_cc"
	    android:layout_width="220px" 
	    android:layout_height="wrap_content"
        android:textSize="20px"
        android:layout_below="@id/address_cc"
        android:layout_marginRight="10px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="5px"
        android:layout_marginBottom="5px"
        android:textColor="@color/white"/>
    <TextView  
		android:id="@+id/hours_cc"
		android:text="@string/hours_cc"
	    android:layout_width="220px" 
	    android:layout_height="wrap_content" 
        android:textSize="20px"
        android:layout_below="@id/phone_cc"
        android:layout_marginRight="10px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="5px"
        android:layout_marginBottom="5px"
        android:textColor="@color/white"/>
    <ImageView
		android:id="@+id/map_image_cc" 
		android:layout_width="240px"
		android:layout_height="240px"
		android:src="@drawable/splash"
        android:layout_toRightOf="@id/address_cc"
        android:layout_marginRight="10px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="100px"
        android:layout_marginBottom="5px"/>
</RelativeLayout>